# cover

./: .gitignore  Cargo.toml  README.md  cover.py  cover_feeder.scad  cover_grip.scad  cover_guide.scad  debug.py  digikey.csv  flake.nix  module.nix  proc_cpuinfo.txt  pyproject.toml  reed_holder.scad
.github/workflows/: ci.yml
kicad/: cover-cache.lib  cover.kicad_pcb  cover.pro  cover.sch
src/: cover.rs  main.rs
