[tool.poetry]
name = "cover"
version = "0.1.0"
description = "MQTT daemon for my shades to interface with home assistant"
authors = ["Alex Martens <alex@thinglab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

lockfile = "0.12.2"
python-daemon = "^2.2.4"
paho-mqtt = "^1.5.1"
gpiozero = "^1.5.1"
pigpio = "1.78"
"RPi.GPIO" = "0.7.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
flake8 = "5.0.4"
flake8-bugbear = "22.7.1"
pep8-naming = "0.13.2"

[tool.poetry.scripts]
cover = "cover:main"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
