[tool.poetry]
name = "cover"
version = "0.1.0"
description = "MQTT daemon for my shades to interface with home assistant"
authors = ["Alex Martens <alex@thinglab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

gpiozero = "^1.6.2"
paho-mqtt = "^1.6.1"
setuptools = "*"
systemd-python = "234"

[tool.poetry.scripts]
cover = "cover:main"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
