[tool.poetry]
name = "cover"
version = "0.1.0"
description = "MQTT daemon for my shades to interface with home assistant"
authors = ["Alex Martens <alex@thinglab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

gpiozero = "^2.0"
paho-mqtt = "^2.1.0"  # add callback_api_version for v2
systemd-python = "235"

[tool.poetry.scripts]
cover = "cover:main"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
